crates/eure-macros/tests/compile_fail/object_key_on_struct.rs
use eure::ObjectKey;

#[derive(ObjectKey)]
struct NotAnEnum {
    field: String,
}

fn main() {}
